--- a/src/components/homepage/SideNavBar.css
+++ b/src/components/homepage/SideNavBar.css
@@ -23,13 +23,13 @@
   }
 
   main {
+	overflow: hidden;
 	position: relative;
 	margin: var(--header-height) 0 0 0;
 	padding: 0 1rem;
 	font-size: 1rem;
 	transition: 0.5s;
 	background-color: #EAF0FA;
-	height: calc(100vh - calc(var(--header-height) + 1rem));
   }
 
   .bg {
